--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bonfida/spl-name-service": "^2.3.7",
+    "@coinbase/onchainkit": "^0.9.1",
+    "@neynar/nodejs-sdk": "^1.10.0",
+    "@solana/web3.js": "^1.90.0",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
